fix: decrease the z-index of pinned messages (#118)
to make it not overlap the menus

--- a/assets/chat/css/style.scss
+++ b/assets/chat/css/style.scss
@@ -549,7 +549,7 @@ hr {
   padding: 4px;
   position: absolute;
   width: 100%;
-  z-index: 9999;
+  z-index: 210;
 
   &.active {
     display: block;
